plugins {
    id 'application'
}

plugins {
    id 'antlr'
}

group 'com.kdsc.protogen'
version '0'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    antlr "org.antlr:antlr4:4.5"
    implementation "com.google.guava:guava:31.0.1-jre"
}

application {
    mainClass.set("com.kdsc.protogen.ProtoGen")
}

generateGrammarSource {
    arguments += ["-visitor", "-long-messages"]
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}